feat(ui): chat selection
